<resources>
    <string name="app_name">MegaConvertor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_currency">Currency</string>
    <string name="menu_area">Area</string>
    <string name="menu_cooking">Cooking</string>
    <string name="menu_storage">Digital Storage</string>
    <string name="menu_energy">Energy</string>
    <string name="menu_distance">Distance</string>
    <string name="menu_mass">Mass</string>
    <string name="menu_power">Power</string>
    <string name="menu_speed">Speed</string>
    <string name="menu_temperature">Temperature</string>
    <string name="menu_time">Time</string>
</resources>
